; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_ldo.c_luaD_protectedparser.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_ldo.c_luaD_protectedparser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, i32 }
%struct.SParser = type { i8*, i32, i32* }

@f_parser = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @luaD_protectedparser(%struct.TYPE_7__* %0, i32* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.SParser, align 8
  %8 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = getelementptr inbounds %struct.SParser, %struct.SParser* %7, i32 0, i32 2
  store i32* %9, i32** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = getelementptr inbounds %struct.SParser, %struct.SParser* %7, i32 0, i32 0
  store i8* %11, i8** %12, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %14 = getelementptr inbounds %struct.SParser, %struct.SParser* %7, i32 0, i32 1
  %15 = call i32 @luaZ_initbuffer(%struct.TYPE_7__* %13, i32* %14)
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %17 = load i32, i32* @f_parser, align 4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @savestack(%struct.TYPE_7__* %18, i32 %21)
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @luaD_pcall(%struct.TYPE_7__* %16, i32 %17, %struct.SParser* %7, i32 %22, i32 %25)
  store i32 %26, i32* %8, align 4
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %28 = getelementptr inbounds %struct.SParser, %struct.SParser* %7, i32 0, i32 1
  %29 = call i32 @luaZ_freebuffer(%struct.TYPE_7__* %27, i32* %28)
  %30 = load i32, i32* %8, align 4
  ret i32 %30
}

declare dso_local i32 @luaZ_initbuffer(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @luaD_pcall(%struct.TYPE_7__*, i32, %struct.SParser*, i32, i32) #1

declare dso_local i32 @savestack(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @luaZ_freebuffer(%struct.TYPE_7__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
